kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: flask
  name: flask
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    service: flask
