kubernetes/vue-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: vue
  name: vue
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: vue
